fixed scrollbar for editor, missing css was re entered

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -10,9 +10,6 @@ body {
   background-size: 100% 100%;
   
 };
-#editor {
-  color: #000000;
-}
 
 h1 {
   text-align: center;
@@ -34,6 +31,11 @@ h2 {
   height: 60vh;
 }
 
+.ql-container.ql-snow {
+  border: 1px solid #ccc;
+  height: 90%;
+}
+
 /* Tell Quill not to scroll */
 #quillContainer {
   color: #000000;
@@ -41,7 +43,20 @@ h2 {
   min-height: 100%;
   padding: 50px;
 }
+
 #quillContainer .ql-editor {
   font-size: 16px;
   overflow-y: visible; 
 }
+
+
+/* Specify our own scrolling container */
+.card-body {
+  height: 100%;
+  min-height: 100%;
+  overflow-y: auto;
+}
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+/* Quill Editor CSS changes Above */
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
